--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinks caseiros da casa</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html"> Home </a>
         </li>
@@ -16,24 +16,41 @@
             <a href="contato.html"> Contato </a>
         </li>
     </ul>
-    
-    <h1>Bourbon drinks</h1>
-    <h2>Old Fashioned</h2>
-    <p>
-        60 ml de Bourbon Whiskey<br>
-        3 dashes de Angostura bitter<br>
-        5-7 ml de xarope de açúcar demerara 2x1<br>
-        Casca de Laranja Bahia como guarnição<br>
-    </p>
-    <h3>Modo de preparo:</h3>
-    <p>
+    <h1 class="center">Bourbon Drinks</h1>
+    <div class="container">
+        <div class="drink">
+            <div class="p-30">
+                <h2 class="center">Old Fashioned</h2>
+                <p class="center">
+                    60 ml de Bourbon Whiskey <br>
+                    3 dashes de Angostura bitter <br>
+                    5-7 ml de xarope de açúcar demerara 2x1 <br>
+                    Casca de Laranja Bahia como guarnição <br>
+                </p>
+            </div>
+            <div>
+                <img class="br-20 wh p-30" src="assets/img/oldfashioned.jpg" alt="Foto do coquetel pronto">
+            </div>
+        </div>
+    <h3 class="center">Modo de preparo:</h3>
+    <p class="center">
         Despejar todos os ingredientes em um mixing glass (exceto a casca de laranja) adicionar gelo e mexer
         com a bailarina até gelar e diluir. Coar com strainer num copo rocks com gelão e espremer os óleos da casca de laranja no final.
     </p>
-
-    <img src="https://www.liquor.com/thmb/_0WLXSRV03SfpWgZ1hwiAkyIrzE=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__liquor__2018__05__08113350__bourbon-old-fashioned-720x720-recipe-ade6f7780c304999be3577e565c9bcdd.jpg" alt="Old Fashioned">
-
-    <h3>Demonstração de preparo:</h3>
-    <iframe width="720" height="450" src="https://www.youtube.com/embed/L7cs2Ka2Irk?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3 class="center">Demonstração de preparo:</h3>
+    <div class="container">
+        <iframe width="720" height="450" src="https://www.youtube.com/embed/L7cs2Ka2Irk?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    </div>
+    <footer>
+        <div class="icones">
+            <img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook">
+            <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
+            <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do LinkedIn">
+        </div>
+        <p class="center">
+        Todos os direitos reservados: Gustavo Macedo &copy;
+        </p>
+    </footer>
 </body>
 </html>
