Adicionando CSS em contato

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     <h3 class="center">Modo de preparo:</h3>
     <p class="center">
-        Despejar todos os ingredientes em um mixing glass (exceto a casca de laranja) adicionar gelo e mexer
+        Despejar todos os ingredientes em um mixing glass previamente gelado (exceto a casca de laranja) adicionar gelo e mexer
         com a bailarina até gelar e diluir. Coar com strainer num copo rocks com gelão e espremer os óleos da casca de laranja no final.
     </p>
     <h3 class="center">Demonstração de preparo:</h3>
