--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <footer>
         <hr>
         <div class="icones">
-            <img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook">
-            <img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram">
-            <img class="tm-social" src="assets/img/linkedin.png" alt="Logo do LinkedIn">
+            <a href="https://www.facebook.com/"><img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook"></a>
+            <a href="https://www.instagram.com/"><img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram"></a>
+            <a href="https://www.linkedin.com/"><img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin"></a>
         </div>
         <p class="center">
         Todos os direitos reservados: Gustavo Macedo &copy;
