--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
                 <button>Enviar</button>
             </form>
         </div>
-        <div class="endereco">
+        <div class="endereco mb-50">
             <div class="p-30">  
                 <h1>
                     Endereço:
