--- a/contato.html
+++ b/contato.html
@@ -16,6 +16,7 @@
             <a href="contato.html"> Contato </a>
         </li>
     </ul>
+<div class="container">
     <div class="contato">
         <div class="p-30">
             <h1>
@@ -37,7 +38,7 @@
                 <button>Enviar</button>
             </form>
         </div>
-        <div class="endereco mb-50">
+        <div class="endereco ml-50">
             <div class="p-30">  
                 <h1>
                     Endereço:
@@ -48,11 +49,17 @@
             </div>
         </div>
     </div>
+</div> 
     <footer>
         <hr>
+        <div class="icones">
+            <a href="https://www.facebook.com/"><img class="tm-social" src="assets/img/facebook.png" alt="Logo do Facebook"></a>
+            <a href="https://www.instagram.com/"><img class="tm-social" src="assets/img/instagram.png" alt="Logo do Instagram"></a>
+            <a href="https://www.linkedin.com/"><img class="tm-social" src="assets/img/linkedin.png" alt="Logo do Linkedin"></a>
+        </div>
         <p class="center">
         Todos os direitos reservados: Gustavo Macedo &copy;
         </p>
-    </footer>   
+    </footer>
 </body>
 </html>
