--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
         Todos os direitos reservados: Gustavo Macedo &copy;
         </p>
     </footer>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
